--- a/hw12_13_14_15_calendar/configs/calendar.env
+++ b/hw12_13_14_15_calendar/configs/calendar.env
@@ -1,6 +1,8 @@
 ENVIRONMENT="dev"
 PORT=9090
 LOG_LEVEL="INFO"
+DB_HOST="localhost"
+DB_PORT=54321
 DB_USERNAME="otus"
 DB_PASSWORD="otus"
 DB_DATABASE="calendar"
