--- a/hw12_13_14_15_calendar/configs/calendar.env
+++ b/hw12_13_14_15_calendar/configs/calendar.env
@@ -1,9 +1,12 @@
 ENVIRONMENT="dev"
 STORAGE_TYPE="memory"
-PORT=9090
 LOG_LEVEL="INFO"
 DB_HOST="localhost"
 DB_PORT=54321
 DB_USERNAME="otus"
 DB_PASSWORD="otus"
 DB_DATABASE="calendar"
+HTTP_SERVER_HOST="localhost"
+HTTP_SERVER_PORT="9090"
+HTTP_SERVER_READ_TIMEOUT=60
+HTTP_SERVER_WRITE_TIMEOUT=60
